<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_help_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/mario_background"
    tools:context="com.example.ak.coinseeker.Help_screen">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="85dp"
        android:layout_marginBottom="60dp"
        android:layout_marginLeft="350dp"
        android:id="@+id/Reference_scrollView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/references">

            <TextView
                android:text="@string/brick"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/brick"
                android:textSize="18sp"
                android:clickable="true">
            </TextView>

            <TextView
                android:text="@string/coin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/coin"
                android:textSize="18sp"
                android:clickable="true">
            </TextView>

            <TextView
                android:text="@string/coin_second"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/coin_second"
                android:textSize="18sp"
                android:clickable="true">
            </TextView>

            <TextView
                android:text="@string/fly_mario"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/fly_mario"
                android:textSize="18sp"
                android:clickable="true">
            </TextView>

            <TextView
                android:text="@string/mario_background"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/mario_background"
                android:textSize="18sp"
                android:clickable="true">
            </TextView>

            <TextView
                android:text="@string/mario_welcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/mario_welcome"
                android:textSize="18sp"
                android:clickable="true">
            </TextView>

            <TextView
                android:text="@string/moving_background"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/moving_background"
                android:textSize="18sp"
                android:clickable="true">
            </TextView>

            <TextView
                android:text="@string/wing_block"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/wing_block"
                android:textSize="18sp"
                android:clickable="true">
            </TextView>

            <TextView
                android:text="@string/brick_sound"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/brick_sound"
                android:textSize="18sp"
                android:clickable="true">
            </TextView>

            <TextView
                android:text="@string/coin_sound"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/coin_sound"
                android:textSize="18sp"
                android:clickable="true">
            </TextView>

            <TextView
                android:text="@string/win_sound"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/win_sound"
                android:textSize="18sp"
                android:clickable="true">
            </TextView>

        </LinearLayout>

    </ScrollView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="85dp"
        android:layout_marginLeft="26dp"
        android:layout_marginRight="260dp"
        android:layout_marginBottom="60dp"
        android:id="@+id/Description_scrollView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:text="@string/game_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/game_des"
                android:textSize="18sp"
                android:clickable="true">
            </TextView>

        </LinearLayout>
    </ScrollView>

    <TextView
        android:text="@string/references"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/citation"
        android:textSize="22sp"
        android:layout_marginLeft="7dp"
        android:layout_marginStart="7dp"
        android:layout_alignBaseline="@+id/game_info"
        android:layout_alignBottom="@+id/game_info"
        android:layout_toRightOf="@+id/authors_link"
        android:layout_toEndOf="@+id/authors_link"
        android:textStyle="normal|bold" />

    <TextView
        android:text="@string/homepage276"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/authors_link"
        android:textSize="20sp"
        android:clickable="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textStyle="normal|italic" />

    <TextView
        android:text="@string/game_information"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/game_info"
        android:textSize="22sp"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="70dp"
        android:layout_below="@+id/authors_link"
        android:textStyle="normal|bold" />


</RelativeLayout>
