<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_choose_configuration"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/mario_background"
    tools:context="com.example.ak.coinseeker.Choose_configuration">


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/enter_coins"
        android:hint="@string/coins"
        android:layout_alignBaseline="@+id/number_of_coins"
        android:layout_alignBottom="@+id/number_of_coins"
        android:layout_alignLeft="@+id/enter_columns"
        android:layout_alignStart="@+id/enter_columns" />

    <Button
        android:text="@string/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cancel_configuration"
        android:layout_alignBaseline="@+id/enter_configuration"
        android:layout_alignBottom="@+id/enter_configuration"
        android:layout_alignLeft="@+id/enter_coins"
        android:layout_alignStart="@+id/enter_coins"
        android:background="@android:color/holo_red_light" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/enter_columns"
        android:hint="@string/columns"
        android:layout_alignBaseline="@+id/number_of_col"
        android:layout_alignBottom="@+id/number_of_col"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        tools:ignore="RelativeOverlap" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/enter_rows"
        android:hint="@string/rows"
        android:layout_alignBaseline="@+id/number_of_rows"
        android:layout_alignBottom="@+id/number_of_rows"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        tools:ignore="RelativeOverlap" />

    <TextView
        android:text="@string/enter_number_of_columns"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/number_of_col"
        android:textSize="24sp"
        android:textColor="@android:color/background_dark"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="120dp" />

    <TextView
        android:text="@string/enter_number_of_rows"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/number_of_rows"
        android:textSize="24sp"
        android:textColor="@android:color/background_dark"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="70dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/enter_number_of_coins"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/number_of_coins"
        android:textSize="24sp"
        android:textColor="@android:color/background_dark"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="170dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/enter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/enter_configuration"
        android:layout_marginRight="24dp"
        android:layout_marginEnd="24dp"
        android:background="@android:color/holo_green_light"
        android:layout_below="@+id/enter_coins"
        android:layout_alignRight="@+id/number_of_rows"
        android:layout_alignEnd="@+id/number_of_rows"
        android:layout_marginTop="17dp" />

</RelativeLayout>
